--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <div class="media-body">
                                 <blockquote class="blockquote">
                                     <p>I haven't been sober for months!</p>
-                                    <p>- Jane Doe</p>
+                                    <p>- John Doe</p>
                                 </blockquote>
                             </div>
                         </div>
